--- a/Home.css
+++ b/Home.css
@@ -1,9 +1,19 @@
 @import url("root.css");
 
+.main-body {
+    overflow-x: hidden;
+    margin: 0px;
+    overflow-y: scroll;
+    background-color: var(--custom-yellow);
+    scrollbar-width: 0;
+}
+
 .home-page-header {
     background-color: var(--custom-yellow);
     display: flex;
+    position: sticky;
     height: 60vh;
+    top: 0;
 }
 
 .menu-header {
@@ -47,6 +57,18 @@
     height: calc(1.5em + 30px);
 }
 
+.home-page-header-title-div {
+    display: flex;
+    flex-direction: column;
+    width: 40vw;
+    height: 100%;
+    justify-content: center;
+    padding-left: 100px;
+    transition:
+        padding 2s,
+        margin 2s;
+}
+
 .title {
     position: relative;
     margin: 0;
@@ -54,7 +76,8 @@
     font-size: 5em;
     font-family: Goli-Regular;
     overflow: hidden;
-    animation: writer 1s 1s ease forwards;
+    /* animation: writer 1s 1s ease forwards; */
+    transition: all;
 }
 
 /* .title::before{
