--- a/root.css
+++ b/root.css
@@ -14,6 +14,22 @@
     border-radius: 10px;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rebeccapurple;
+    position: absolute;
+    margin: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: red;
+
+}
+
 @font-face {
     font-family: Goli-Light;
     src: url("/fonts/Goli/Goli-Light.ttf");
