--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,14 @@
 @import url("root.css");
 
+.c-shape-1 {
+    width: 60vh;
+    height: 60vh;
+    margin: auto;
+    margin-top: 20vh;
+    border-radius: 55% 45% 55% 40% / 45% 45% 55% 55% ;
+    background-image: radial-gradient(rgba(255, 255, 255, 0.184), rgba(255, 255, 255, 0.549) 60%, rgb(232, 14, 210) 95%);
+}
+
 .main-body {
     overflow-x: hidden;
     margin: 0px;
